--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "concurrently": "^5.3.0",
-    "styled-components": "^5.2.1"
+    "randomstring": "^1.1.5",
+    "styled-components": "^5.2.1",
+    "uuid": "^8.3.2"
   }
 }
